--- a/absl/flags/BUILD
+++ b/absl/flags/BUILD
@@ -6,4 +6,15 @@ py_library(
     srcs_version = "PY2AND3",
     visibility = ["//visibility:public"],
     deps = [
-        
+        ":_argument_parser",
+        ":_defines",
+        ":_exceptions",
+        ":_flag",
+        ":_flagvalues",
+        ":_helpers",
+        ":_validators",
+    ],
+)
+
+py_library(
+    name = "argparse_
