--- a/absl/flags/BUILD
+++ b/absl/flags/BUILD
@@ -17,4 +17,14 @@ py_library(
 )
 
 py_library(
-    name = "argparse_
+    name = "argparse_flags",
+    srcs = ["argparse_flags.py"],
+    srcs_version = "PY2AND3",
+    visibility = ["//visibility:public"],
+    deps = [":flags"],
+)
+
+py_library(
+    name = "_argument_parser",
+    srcs = ["_argument_parser.py"],
+    src
