--- a/absl/flags/BUILD
+++ b/absl/flags/BUILD
@@ -73,4 +73,17 @@ py_library(
     srcs_version = "PY2AND3",
     deps = [
         ":_exceptions",
-  
+        ":_flag",
+        ":_helpers",
+        ":_validators_classes",
+    ],
+)
+
+py_library(
+    name = "_helpers",
+    srcs = ["_helpers.py"],
+    srcs_version = "PY2AND3",
+)
+
+py_library(
+    n
