--- a/absl/flags/BUILD
+++ b/absl/flags/BUILD
@@ -86,4 +86,17 @@ py_library(
 )
 
 py_library(
-    n
+    name = "_validators",
+    srcs = [
+        "_validators.py",
+    ],
+    srcs_version = "PY2AND3",
+    deps = [
+        ":_exceptions",
+        ":_flagvalues",
+        ":_validators_classes",
+    ],
+)
+
+py_library(
+   
