--- a/absl/flags/BUILD
+++ b/absl/flags/BUILD
@@ -245,3 +245,14 @@ py_test(
     size = "small",
     srcs = ["tests/flags_numeric_bounds_test.py"],
     python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":_validators",
+        ":flags",
+        "//absl/testing:absltest",
+    ],
+)
+
+py_test(
+    name = "tests/flags_test",
+    size = "small",
