--- a/absl/flags/BUILD
+++ b/absl/flags/BUILD
@@ -256,3 +256,12 @@ py_test(
 py_test(
     name = "tests/flags_test",
     size = "small",
+    srcs = ["tests/flags_test.py"],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":_exceptions",
+        ":_helpers",
+        ":flags",
+        ":tests/module_bar",
+        ":tests/module_
