--- a/absl/testing/BUILD
+++ b/absl/testing/BUILD
@@ -134,3 +134,124 @@ py_test(
     data = [":tests/absltest_randomization_testcase"],
     python_version = "PY3",
     srcs_version = "PY3",
+    deps = [
+        ":_bazelize_command",
+        ":absltest",
+        ":parameterized",
+        ":tests/absltest_env",
+        "//absl/flags",
+    ],
+)
+
+py_binary(
+    name = "tests/absltest_randomization_testcase",
+    testonly = 1,
+    srcs = ["tests/absltest_randomization_testcase.py"],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":absltest",
+    ],
+)
+
+py_test(
+    name = "tests/absltest_sharding_test",
+    size = "small",
+    srcs = ["tests/absltest_sharding_test.py"],
+    data = [":tests/absltest_sharding_test_helper"],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":_bazelize_command",
+        ":absltest",
+        ":tests/absltest_env",
+    ],
+)
+
+py_binary(
+    name = "tests/absltest_sharding_test_helper",
+    testonly = 1,
+    srcs = ["tests/absltest_sharding_test_helper.py"],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [":absltest"],
+)
+
+py_test(
+    name = "tests/absltest_test",
+    size = "small",
+    srcs = ["tests/absltest_test.py"],
+    data = [":tests/absltest_test_helper"],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":_bazelize_command",
+        ":absltest",
+        ":parameterized",
+        ":tests/absltest_env",
+    ],
+)
+
+py_binary(
+    name = "tests/absltest_test_helper",
+    testonly = 1,
+    srcs = ["tests/absltest_test_helper.py"],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":absltest",
+        "//absl:app",
+        "//absl/flags",
+    ],
+)
+
+py_test(
+    name = "tests/flagsaver_test",
+    srcs = ["tests/flagsaver_test.py"],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":absltest",
+        ":flagsaver",
+        ":parameterized",
+        "//absl/flags",
+    ],
+)
+
+py_test(
+    name = "tests/parameterized_test",
+    srcs = ["tests/parameterized_test.py"],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":absltest",
+        ":parameterized",
+    ],
+)
+
+py_test(
+    name = "tests/xml_reporter_test",
+    srcs = ["tests/xml_reporter_test.py"],
+    data = [":tests/xml_reporter_helper_test"],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":_bazelize_command",
+        ":absltest",
+        ":parameterized",
+        ":xml_reporter",
+        "//absl/logging",
+    ],
+)
+
+py_binary(
+    name = "tests/xml_reporter_helper_test",
+    testonly = 1,
+    srcs = ["tests/xml_reporter_helper_test.py"],
+    python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        ":absltest",
+        "//absl/flags",
+    ],
+)
