--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,4 +1,7 @@
 # Minimal makefile for Sphinx documentation
 #
 # To generate html docs locally:
-# 
+#   Recommend doing this from a virtual environment:
+#   $ sudo apt-get install virtualenv python3-venv
+#   $ virtualenv myproject  # or python3 -m venv myproject
+#   $ source myproject/bin/activat
