--- a/docs/Makefile
+++ b/docs/Makefile
@@ -13,4 +13,9 @@
 #
 
 # You can set these variables from the command line, and also
-#
+# from the environment for the first two.
+SOURCEDIR      = ../absl
+RSTDIR         = source
+HTMLDIR        = build
+HTMLDIR      = build
+# If you change the conf.py apidoc_excluded_paths, you need to 
