--- a/docs/Makefile
+++ b/docs/Makefile
@@ -22,4 +22,10 @@ HTMLDIR      = build
 # the excluded paths in APIDOC_EXCLUDE too.  The paths are relative
 # to the docs/ directory (if you want to filter out absl/tests you need
 # to use "../*/tests".)
-APIDOC_EXCLUDE = ../*/*/tests/* .
+APIDOC_EXCLUDE = ../*/*/tests/* ../*/tests/*
+SPHINXBUILD   ?= sphinx-build
+SPHINXAPIDOC  ?= sphinx-apidoc
+
+# Build .rst files for all Python sources in SOURCEDIR.
+# This rule isn't called by readthedocs, its only used for manual testing.
+rstfiles:
